CMS-1951 New ContentForm PoC Fixed overflow for parents of floating children

--- a/modules/wem-webapp/src/main/webapp/admin2/resources/less/apps/content/wizard/form/form-item-set-occurrence-view.less
+++ b/modules/wem-webapp/src/main/webapp/admin2/resources/less/apps/content/wizard/form/form-item-set-occurrence-view.less
@@ -1,10 +1,10 @@
 .form-item-set-occurrence-view {
 
   clear: left;
+  overflow: hidden;
 
   border: 10px solid #eeeeee;
 
-  overflow: auto;
   margin-top: 10px;
   margin-bottom: 10px;
 
