--- a/modules/wem-webapp/src/main/webapp/admin2/resources/less/apps/content/wizard/form/input-container-view.less
+++ b/modules/wem-webapp/src/main/webapp/admin2/resources/less/apps/content/wizard/form/input-container-view.less
@@ -1,6 +1,7 @@
 .input-container-view {
 
   clear: left;
+  overflow: hidden;
 
   .input-label {
     float: left;
